--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 47.0,
+"row": 94,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,11 +129,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 6.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
 }
@@ -146,7 +146,7 @@ state={
 "column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -164,4 +164,22 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
+}
+
+[res://Scenes/Player/PlayerStates/walking_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 90,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 57,
+"scroll_position": 39.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 55,
+"selection_to_column": 90,
+"selection_to_line": 57,
+"syntax_highlighter": "GDScript"
 }
