--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,20 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/ocean_shader.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/level0.tscn", "res://Scenes/root.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/shader.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/obstacleSpawner.tscn", "res://Scenes/proc_gen.tscn", "res://Scenes/border.tscn")
-current_scene="res://Scenes/border.tscn"
+open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/level_1.tscn", "res://Scenes/root.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/ocean_shader.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/obstacleSpawner.tscn", "res://Scenes/Levels/level_1_gen.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/Levels/level_2.tscn")
+current_scene="res://Scenes/ocean_shader.tscn"
 center_split_offset=-487
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
