--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/level0.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/terrain.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Menu/", "res://Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,12 +27,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Player/player.tscn", "res://Scenes/Attacks/AttackSuper.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/root.tscn", "res://Scenes/Levels/level_1_gen.tscn", "res://Scenes/level0.tscn")
-current_scene="res://Scenes/level0.tscn"
+open_scenes=PackedStringArray("res://Scenes/Player/player.tscn", "res://Scenes/Attacks/AttackSuper.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/root.tscn", "res://Scenes/Levels/level_1_gen.tscn", "res://Scenes/level0.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/terrain.tscn")
+current_scene="res://Scenes/terrain.tscn"
 center_split_offset=-487
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=14
 
 [ScriptEditor]
 
