--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/options.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Menu/", "res://language/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/game_over.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://language/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://language/language_setting.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options.tscn")
-current_scene="res://language/language_setting.tscn"
+open_scenes=PackedStringArray("res://language/language_setting.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/game_over.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-480
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Menu/SetLocation.gd", "res://language/language_setting.gd"]
+open_scripts=["res://language/language_setting.gd"]
 selected_script="res://language/language_setting.gd"
 open_help=[]
 script_split_offset=150
