--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menu/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menu/scrolling.gdshader")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Menu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Levels/level_1.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/shader.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/ocean_shader.tscn")
-current_scene="res://Scenes/Enemies/jellyfish.tscn"
+open_scenes=PackedStringArray("res://Scenes/Levels/level_1.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/shader.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/ocean_shader.tscn", "res://Scenes/cave.tscn", "res://Scenes/obstacleSpawner.tscn", "res://Scenes/options(remake).tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Menu/MainMenu.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=14
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Attacks/attack_superclass.gd", "res://Scenes/Enemies/enemyStats.cs", "res://Scenes/Player/PlayerStates/idle_state.gd", "res://Scenes/Enemies/jellyfish.cs", "res://language/language_setting.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scenes/scene_transition.gd", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
-selected_script="res://Scenes/Enemies/jellyfish.cs"
+open_scripts=["res://Scenes/Attacks/attack_superclass.gd", "res://Scenes/cave.gd", "res://Scenes/Player/PlayerStates/death_state.gd", "res://Scenes/Enemies/enemyStats.cs", "res://Scenes/game_over.cs", "res://Scenes/Player/PlayerStates/idle_state.gd", "res://Scenes/Enemies/jellyfish.cs", "res://language/language_setting.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/obstacleSpawner.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scenes/scene_transition.gd", "res://Scenes/spawner.cs", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
+selected_script="res://Scenes/Menu/MainMenu.cs"
 open_help=["Range"]
 script_split_offset=140
 list_split_offset=0
@@ -46,4 +46,4 @@ list_split_offset=0
 
 open_shaders=["res://Scripts/shader.gdshader", "res://Scenes/Player/player.gdshader"]
 split_offset=400
-selected_shader="res://Scripts/shader.gdshader"
+selected_shader="res://Scenes/Player/player.gdshader"
