--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 43.0,
+"row": 94,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -95,16 +95,13 @@ state={
 "selection": false,
 "syntax_highlighter": "Standard"
 }
-
-[res://Scenes/Enemies/jellyfish.cs]
-
-state={
+"res://Scenes/Enemies/jellyfish.cs]state"={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 21,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
@@ -118,22 +115,22 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 33,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Standard"
+"syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/Player/PlayerStates/walking_state.gd]
+[res://language/language_setting.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 50.0,
+"row": 20,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -152,71 +149,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/cave.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/pause_menu.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://language/language_setting.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/scene_transition.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 44,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scenes/Player/PlayerStates/idle_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -227,10 +168,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -250,44 +191,20 @@ state={
 "syntax_highlighter": "Standard"
 }
 
-[res://Scenes/Attacks/attack_superclass.gd]
+[res://Scenes/Player/PlayerStates/walking_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 90,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 57,
+"scroll_position": 39.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 55,
+"selection_to_column": 90,
+"selection_to_line": 57,
 "syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/Player/PlayerStates/death_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 76,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/spawner.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 106,
-"scroll_position": 44.0,
-"selection": false,
-"syntax_highlighter": "Standard"
 }
