--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Weapons/Types/shotgun.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/", "res://Scenes/Player/PlayerStates/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Levels/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Weapons/Types/sniper.tscn", "res://Scenes/Weapons/Types/shotgun.tscn", "res://Scenes/Weapons/Types/cannon.tscn", "res://Scenes/Player/player.tscn")
-current_scene="res://Scenes/Player/player.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Weapons/Types/sniper.tscn", "res://Scenes/Weapons/Types/shotgun.tscn", "res://Scenes/Weapons/Types/cannon.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/level_3_gen.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/cave.gd", "res://Scenes/Player/hand.gd", "res://Scenes/Enemies/jellyfish.cs", "res://language/language_setting.gd", "res://Scenes/Weapons/Types/machine_gun.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Weapons/projectile.gd", "res://Scenes/Weapons/Types/shotgun.gd", "res://Scenes/Weapons/Types/sniper.gd", "res://Scenes/Player/PlayerStates/walking_state.gd", "res://Scenes/Weapons/weapons_base.gd"]
-selected_script="res://Scenes/Player/player.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
