--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,14 +13,14 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Levels/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Weapons/Types/sniper.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Weapons/Types/sniper.tscn", "res://Scenes/Weapons/Types/shotgun.tscn", "res://Scenes/Weapons/Types/cannon.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/level_3_gen.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+current_scene="res://Scenes/Player/player.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://damage_numbers.gd", "res://Scenes/Levels/levelManager.cs", "res://Scenes/Weapons/Types/machine_gun.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/Player/player.gd", "res://Scenes/Weapons/Types/shotgun.gd", "res://Scenes/Weapons/Types/sniper.gd", "res://Scenes/Weapons/weapons_base.gd"]
+selected_script="res://damage_numbers.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
