--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/jellyfish.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://Scenes/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/pause_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Enemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/cave.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/cave.tscn", "res://Scenes/game_over.tscn", "res://Scenes/pause_menu.tscn")
+current_scene="res://Scenes/pause_menu.tscn"
 center_split_offset=-252
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Player/cam.gd", "res://Scenes/cave.gd"]
-selected_script="res://Scenes/cave.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
